--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "js to pdf editor",
   "main": "index.js",
+  "bin": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build": "pkg .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -15,6 +17,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "^5.1.0",
+    "fast-xml-parser": "^5.2.1",
     "pdf-lib": "^1.17.1"
+  },
+  "devDependencies": {
+    "lodash": "^4.17.21"
   }
 }
