--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "express": "^5.1.0",
     "fast-xml-parser": "^5.2.1",
-    "pdf-lib": "^1.17.1"
+    "multer": "^1.4.5-lts.2",
+    "pdf-lib": "^1.17.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "lodash": "^4.17.21"
